--- a/test/fixtures/abilities.yml
+++ b/test/fixtures/abilities.yml
@@ -2,8 +2,10 @@
 
 one:
   ability: MyString
-  category: one
+  abilities_type: one
+  area: one
 
 two:
   ability: MyString
-  category: two
+  abilities_type: two
+  area: two
